# world_model

./: .gitignore  README.md  config.yaml  design.md  pyproject.toml
docs/experiments/2026-03-rollout-aware-scheduled-sampling/: README.md  compare_runs.py  config_rollout_aware.yaml
docs/experiments/2026-03-rollout-aware-scheduled-sampling/results/: REPORT.md
scripts/: activate_venv.sh  setup_venv.sh
src/: __init__.py  eval.py  interactive_rollout.py  rollout_cli.py  train.py
src/envs/: atari_wrappers.py  procgen_wrappers.py
src/models/: world_model.py
src/utils/: io.py  metrics.py  rollout_helpers.py  seed.py  train_utils.py  video.py
tests/: test_dataset.py  test_interactive_rollout.py  test_model.py  test_rollout.py
